hetzner/09_workloads/cv_web_dev/peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: allow-plaintext-to-backend
  namespace: cv-web-dev-ns
spec:
  selector:
    matchLabels:
      app: cv-web-backend
  mtls:
    mode: PERMISSIVE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cv-web-backend
  namespace: cv-web-dev-ns
spec:
  host: cv-web-backend-dev-cv-web-backend.cv-web-dev-ns.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
